@@ -112,7 +112,7 @@ enum {   // do not renumber - these values are saved in session files
     XSET_MENU_FONTDLG,
     XSET_MENU_ICON,
     XSET_MENU_COLORDLG,
-    XSET_MENU_DUMMY2,
+    XSET_MENU_CONFIRM,
     XSET_MENU_DUMMY3,
     XSET_MENU_DUMMY4,
     XSET_MENU_DUMMY5,
@@ -150,6 +150,7 @@ enum {
     XSET_JOB_REMOVE,
     XSET_JOB_NORMAL,
     XSET_JOB_CHECK,
+    XSET_JOB_CONFIRM,
     XSET_JOB_DIALOG,
     XSET_JOB_MESSAGE,
     XSET_JOB_SHOW,
